--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
 # Default role variables
 
-ssl_cert_directory: /opt/certs
-ssl_local_cert_directory: "files/certs"
+tls_cert_directory: /opt/certs
+tls_local_cert_directory: "files/certs"
