--- a/tasks/tls.yml
+++ b/tasks/tls.yml
@@ -34,3 +34,14 @@
   args:
     creates: "dhparams.pem"
     chdir: "{{ tls_cert_directory }}"
+
+- name: Copy trusted CA certs
+  copy:
+    mode: 0600
+    owner: root
+    group: root
+    src: "{{ tls_local_cert_directory }}/{{ item }}"
+    dest: "/usr/local/share/ca-certificates/"
+  with_items: '{{ tls_ca_certificates|default(omit) }}'
+  when: tls_ca_certificates is defined
+  notify: Update trusted CAs
